src/css/responsive.css
/* ... */
@media (max-width: 767px) {
    .about-sec .funfacts-wrap {
        grid-template-columns: repeat(1, 1fr);
    }

    .about-sec .funfacts-wrap .funfact-box:nth-child(3),
    .about-sec .funfacts-wrap .funfact-box:nth-child(odd) {
        margin-top: 0;
    }

    .contact-sec .contact-content>p br {
        display: none;
    }

    .team-sec {
        padding: 40px 20px 40px 20px;
    }

    .feature-sec .custom-container {
        padding-left: 22px;
        padding-right: 22px;
    }

    .comment-form {
        padding-bottom: 20px;
    }

    .comment-box {
        flex-direction: column;
        align-items: flex-start;
    }

    .comment-box .comment-body .reply-btn {
        position: relative;
        right: auto;
        top: auto;
        display: inline-flex;
        margin-top: 10px;
    }

    .blog-sidebar {
        width: 100%;
    }

    .header-sidebar-wrap .header-sidebar-content {
        gap: 50px;
    }

    .process-sec {
        padding: 15px;
    }

    .radio-btns {
        gap: 15px;
    }

    .checkbox-btns {
        gap: 25px;
    }


}

@media (max-width: 699px) {
    .service-sec-2 .service-box .service-inner {
        gap: 20px;
    }

    .service-sec-2 .service-box .service-inner .service-img-box:first-child {
        width: 100px;
        height: 100px;
    }

    .service-sec-2 .service-lists-header .service-header-th:first-child {
        width: 180px;
    }
}

@media (max-width: 424px) {
    .hero-sec .hero-inner {
        height: auto;
    }

    .service-box .service-inner .service-img-box img {
        width: 100px;
        height: 140px;
        top: -50px;
    }
}

@media (max-width: 450px) {
    .pricing-sec .pricing_nav_wrap .nav-hover-shape {
        width: 50%;
        margin: 0;
        display: none;
    }

    .pricing-sec .pricing_nav .nav-item button {
        min-width: auto;
    }

    .pricing-sec .pricing_nav {
        gap: 30px;
    }
}

